<resources>
    <string name="app_name">Tippy</string>
    <string name="bill_amount_hint">0.00</string>
    <string name="bill_amount_label">Bill Amount</string>
    <string name="tip_label">Tip</string>
    <string name="total_label">Total</string>
    <string name="tip_init_val">0.00</string>
    <string name="total_init_val">0.00</string>
    <string name="credits">Made with 💻 by Prasanna</string>
</resources>